Add markdownlint with pre-commit (#357)
Add basic markdownlint config file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,15 @@ repos:
         - --license-filepath
         - scripts/ci/LICENSE-template.txt
         - --fuzzy-match-generates-todo
+- repo: https://github.com/igorshubovych/markdownlint-cli
+  rev: v0.46.0
+  hooks:
+    - id: markdownlint
+      name: run markdownlint
+      description: check Markdown files with markdownlint
+      args: [--config=.github/linters/.markdown-lint.yml]
+      types: [markdown]
+      files: \.md$
 - repo: https://github.com/shellcheck-py/shellcheck-py
   rev: v0.11.0.1
   hooks:
