--- a/.pre-commit-heavy.yaml
+++ b/.pre-commit-heavy.yaml
@@ -18,13 +18,17 @@ repos:
         - --config=p/command-injection
         - --config=p/cwe-top-25
         - --config=p/docker-compose
+        - --config=p/dockerfile
+        - --config=p/flask
+        - --config=p/github-actions
         - --config=p/jwt
         - --config=p/owasp-top-ten
         - --config=p/python
+        - --config=p/python-command-injection
         - --config=p/secrets
         - --config=p/security-audit
         - --config=p/sql-injection
-        - --config=r/python.lang.security.audit.dangerous-asyncio-shell
+        # - --config=r/python.lang.security.audit.dangerous-asyncio-shell-audit
         - --disable-version-check
         - --error
         - --exclude-rule=generic.html-templates.security.var-in-href.var-in-href
@@ -32,6 +36,9 @@ repos:
         - --exclude-rule=python.flask.security.xss.audit.template-unescaped-with-safe.template-unescaped-with-safe
         - --exclude-rule=python.lang.security.use-defused-xml-parse.use-defused-xml-parse
         - --exclude-rule=python.lang.security.use-defused-xml.use-defused-xml
+        - --exclude-rule=python.lang.security.audit.dangerous-asyncio-create-exec-audit.dangerous-asyncio-create-exec-audit
+        - --exclude-rule=python.lang.security.audit.dangerous-annotations-usage.dangerous-annotations-usage
+        - --exclude-rule=python.lang.security.audit.dangerous-subprocess-use-audit.dangerous-subprocess-use-audit
         - --exclude=migrations/versions/0027_2025.09.08_69e565eb.py
         - --metrics=off
         - --quiet
