--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,6 +54,8 @@ repos:
   hooks:
     - id: djhtml
       files: .*/.*\.html$
+    - id: djcss
+      files: .*/atr.css$
 #- repo: https://github.com/Riverside-Healthcare/djLint
 #  rev: v1.36.4
 #  hooks:
