Treat all script lint warnings as errors

--- a/.pre-commit-heavy.yaml
+++ b/.pre-commit-heavy.yaml
@@ -6,7 +6,7 @@ repos:
       # Install biome from https://biomejs.dev/guides/manual-installation/
       # Avoid using NPM to install it until #359 is resolved
       name: biome JS check
-      entry: biome check --write --files-ignore-unknown=true --no-errors-on-unmatched --colors=off
+      entry: biome check --write --error-on-warnings --files-ignore-unknown=true --no-errors-on-unmatched --colors=off
       language: system
       types: [javascript]
       files: ^atr/static/js/src/.*\.js$
@@ -21,8 +21,8 @@ repos:
         # These must be in the order deny, warn, allow
         - --deny=correctness
         - --deny=perf
-        - --warn=suspicious
-        - --warn=pedantic
+        - --deny=suspicious
+        - --deny=pedantic
         - --allow=unicorn/prefer-query-selector
 - repo: https://github.com/oxipng/oxipng
   rev: v9.1.5
