Use uvloop to avoid APPLICATION_DATA_AFTER_CLOSE_NOTIFY errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
   "gitignore-parser (>=0.1.12,<0.2.0)",
   "greenlet>=3.1.1,<4.0.0",
   "htpy (>=25.7.0,<26.0.0)",
-  "hypercorn~=0.17",
+  "hypercorn[uvloop]~=0.17",
   "ldap3 (==2.10.2rc2)",
   "packaging>=25.0",
   "pgpy>=0.6.0",
