--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -2,9 +2,9 @@ name: CodeQL
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main, sbp]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
   schedule:
     # Run every Monday at 5:30 AM UTC
     - cron: '30 5 * * 1'
