Make e2e tests use their own context

--- a/tests/Dockerfile.e2e
+++ b/tests/Dockerfile.e2e
@@ -2,5 +2,5 @@ FROM mcr.microsoft.com/playwright/python:v1.57.0-noble
 
 RUN pip3 install --no-cache-dir --break-system-packages pytest pytest-playwright
 
-COPY tests/e2e /run/tests/e2e
+COPY . /run/tests/e2e
 WORKDIR /run/tests
