--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -43,8 +43,8 @@ services:
 
   e2e-dev:
     build:
-      context: ..
-      dockerfile: tests/Dockerfile.e2e
+      context: e2e
+      dockerfile: ../Dockerfile.e2e
     depends_on:
       atr-dev:
         condition: service_healthy
@@ -69,8 +69,8 @@ services:
 
   e2e:
     build:
-      context: ..
-      dockerfile: tests/Dockerfile.e2e
+      context: e2e
+      dockerfile: ../Dockerfile.e2e
     depends_on:
       atr:
         condition: service_healthy
