Run pre-commit hooks on pushes to the primary development branches

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -1,6 +1,8 @@
 name: Analyze using pre-commit hooks
 
 on:
+  push:
+    branches: [main, sbp]
   pull_request:
     branches: [main]
   workflow_dispatch:
